src/main/java/com/example/olc/employee/error/AlreadyExistEmployeeError.java
package com.example.olc.employee.error;

import com.example.olc.common.error.BaseError;

public class AlreadyExistEmployeeError extends BaseError {}
